feat: add code highlight support, add .env for python executable and updated clean function to clear the stemap as well.

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | {{ site.site_name }}</title>
     <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/syntax.css">
+    <html lang="en" data-theme="{{ site.theme }}"></html>
 </head>
 <body class="pt-24">
 
