--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,7 +9,7 @@
     {% for post in posts %}
         <div class="card bg-base-200 shadow-xl">
             <div class="card-body">
-                <h2 class="card-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                <h2 class="card-title"><a href="{{ post.url }}/">{{ post.title }}</a></h2>
                 <p>Published on: {{ post.date }}</p>
             </div>
         </div>
