--- a/templates/main.html
+++ b/templates/main.html
@@ -37,7 +37,7 @@
       <h2 class="card-title">My Blog</h2>
       <p>A collection of my thoughts, findings, and technical deep-dives.</p>
       <div class="card-actions justify-end">
-        <a href="/blog.html" class="btn btn-primary">Read Now</a>
+        <a href="/blog/" class="btn btn-primary">Read Now</a>
       </div>
     </div>
   </div>
