--- a/templates/post.html
+++ b/templates/post.html
@@ -7,7 +7,7 @@
         <div class="my-4">
             <strong>Tags:</strong>
                 {% for tag in page.tags %}
-                    <a href="/tags/{{ tag }}.html" class="btn btn-xs">{{ tag }}</a>
+                    <a href="/tags/{{ tag }}/.html" class="btn btn-xs">{{ tag }}</a>
                 {% endfor %}
         </div>
         <div class="divider"></div>
