fix: formatting issues while generating html
feat: add fonts through tailwindcss/typography

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
       {% endif %}
 
       <div class="max-w-md">
-        <h1 class="text-5xl font-bold">{{ page.hero_title }} 👋</h1>
+        <h1 class="text-5xl font-bold">Hello, I'm {{ page.hero_title }} 👋</h1>
         <p class="py-6">{{ page.hero_subtitle }}</p>
 
         <div class="join">
