--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dracula">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }} | {{ site.site_name }}</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/syntax.css">
-    <html lang="en" data-theme="{{ site.theme }}"></html>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title }} | {{ site.site_name }}</title>
+  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/syntax.css">
+  <html lang="en" data-theme="{{ site.theme }}">
+
+  </html>
 </head>
+
 <body class="pt-24">
 
-    <div class="navbar bg-base-100 fixed top-0 left-0 z-50">
-      <div class="flex-1">
-        <a href="/" class="btn btn-ghost text-xl">{{ site.site_name }}</a>
-      </div>
-      <div class="flex-none">
-        <ul class="menu menu-horizontal px-1">
-          {% for item in site.navigation %}
-            <li><a href="{{ item.url }}">{{ item.name }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
+  <div class="navbar bg-base-100 fixed top-0 left-0 z-50">
+    <div class="flex-1">
+      <a href="/" class="btn btn-ghost text-xl">{{ site.site_name }}</a>
     </div>
+    <div class="flex-none">
+      <ul class="menu menu-horizontal px-1">
+        {% for item in site.navigation %}
+        <li><a href="{{ item.url }}">{{ item.name }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 
-    <div class="container mx-auto p-8">
-        {% block content %}{% endblock %}
-    </div>
+  <div class="container mx-auto p-8">
+    {% block content %}{% endblock %}
+  </div>
 
 </body>
+
 </html>
