--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,16 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
-    <p>{{ content | safe }}</p>
+    <h1 class="text-5xl font-extrabold tracking-tight mb-6">{{ page.title }}</h1>
+
+    {% if content %}
+    <article class="prose dark:prose-invert max-w-none">
+        {{ content | safe }}
+    </article>
     <div class="divider"></div>
+    {% endif %}
 
     <div class="space-y-8 mt-8">
     {% for post in posts %}
         <div class="card bg-base-200 shadow-xl">
             <div class="card-body">
-                <h2 class="card-title"><a href="{{ post.url }}/">{{ post.title }}</a></h2>
-                <p>Published on: {{ post.date }}</p>
+                <h2 class="card-title">
+                    <a href="{{ post.url }}/">{{ post.title }}</a>
+                </h2>
+                <p class="text-sm opacity-70">Published: {{ post.date }}</p>
             </div>
         </div>
     {% endfor %}
