--- a/templates/post.html
+++ b/templates/post.html
@@ -1,16 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <article>
-        <h1 class="text-3xl font-bold">{{ page.title }}</h1>
-        <p class="text-sm text-gray-500 my-2">Published on: {{ page.date }}</p>
-        <div class="my-4">
-            <strong>Tags:</strong>
-                {% for tag in page.tags %}
-                    <a href="/tags/{{ tag }}/.html" class="btn btn-xs">{{ tag }}</a>
-                {% endfor %}
-        </div>
-        <div class="divider"></div>
-        {{ content | safe }}
-    </article>
+<article class="prose dark:prose-invert max-w-none">
+    <header>
+        <h1 class="mb-2">{{ page.title }}</h1>
+        {% if page.date %}
+        <p class="text-sm opacity-70">Published on: {{ page.date }}</p>
+        {% endif %}
+        {% if page.tags %}
+        <p class="text-sm mt-2">
+            Tags:
+            {% for tag in page.tags %}
+            <a class="badge badge-sm" href="/tags/{{ tag }}.html">{{ tag }}</a>
+            {% endfor %}
+        </p>
+        {% endif %}
+        <hr>
+    </header>
+
+    {{ content | safe }}
+</article>
 {% endblock %}
