--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,10 @@
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/syntax.css">
   <html lang="en" data-theme="{{ site.theme }}">
-
   </html>
 </head>
 
-<body class="pt-24">
-
+<body class="pt-24 min-h-screen flex flex-col">
   <div class="navbar bg-base-100 fixed top-0 left-0 z-50">
     <div class="flex-1">
       <a href="/" class="btn btn-ghost text-xl">{{ site.site_name }}</a>
@@ -27,10 +25,13 @@
     </div>
   </div>
 
-  <div class="container mx-auto p-8">
+  <main class="flex-grow container mx-auto p-8">
     {% block content %}{% endblock %}
-  </div>
+  </main>
 
+  <footer class="mt-auto w-full text-center py-6">
+    Generated using mettu, with ❤️
+  </footer>
 </body>
 
 </html>
