--- a/templates/blog.html
+++ b/templates/blog.html
@@ -13,12 +13,14 @@
     <div class="space-y-8 mt-8">
     {% for post in posts %}
         <div class="card bg-base-200 shadow-xl">
+            <a href="{{ post.url }}/">
             <div class="card-body">
                 <h2 class="card-title">
-                    <a href="{{ post.url }}/">{{ post.title }}</a>
+                    {{ post.title }}
                 </h2>
                 <p class="text-sm opacity-70">Published: {{ post.date }}</p>
             </div>
+            </a>
         </div>
     {% endfor %}
     </div>
